--- a/global_app/templates/includes/dealpanels.html
+++ b/global_app/templates/includes/dealpanels.html
@@ -22,31 +22,10 @@
                  class="panel-collapse collapse{% if forloop.first %} in {% endif %}">
                 <div class="panel-body">
                     <table>
-                        <col width="23%"
+                        <col width="23%">
+
                         {% if form.forms %}
-
-                            {% if form.forms.0.has_investor %}
-                                {{ form }}
-
-                                {% comment %}
-                        <tr>
-                          <td>Primary investor:</td>
-                          <td>{{ investor.primary_investor.name }}</td>
-                        </tr>
-                        {% for i in investor.secondary_investors %}
-                          <tr>
-                            <td>Secondary investor:</td>
-                            <td>{{i.tags.investor_name}} - {{i.tags.country}}, {{i.tags.classification}} ({{i.investment_ratio}}%)</td>
-                            <td>{{i.comment}}</td>
-                          </tr>
-                        {% endfor %}
-                        {% endcomment %}
-
-                            {% else %}    {# form.forms.0.has_investor #}
-
-                                {{ form }}
-
-                            {% endif %}   {# form.forms.0.has_investor #}
+                            {{ form }}
                         {% else %}      {# form.forms #}
                             {{ form.as_table }}
                         {% endif %}     {# form.forms #}
