Map JS fixed and first url fix

--- a/global_app/templates/add-deal.html
+++ b/global_app/templates/add-deal.html
@@ -13,9 +13,9 @@
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
-{# DISABLED because it interferes with django_select2 (causes TypeError: maps[mapId] is undefined) #}
-{#      <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>  #}
-{#      <script>unlockMaps()</script>  #}
+
+    <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script>unlockMaps()</script>
 
     {# include django_select2 CSS; must be done in form loop because it's a property of form.media #}
     {% if forms %}
