added not public deals to dashboard

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -26,6 +26,8 @@
                         class="number">{{ statistics.overall_deal_count }}</span></div>
                 <div class="col-md-2 pull-right">{% trans "Public deals" %}:<br><span
                         class="number">{{ statistics.public_deal_count }}</span></div>
+                <div class="col-md-2 pull-right">{% trans "Not public deals" %}:<br><span
+                        class="number">{{ statistics.not_public_deal_count }}</span></div>
             {% endif %}
         </div>
 
