--- a/templates/language_chooser.html
+++ b/templates/language_chooser.html
@@ -2,11 +2,17 @@
 
 {% if languages|length > 1 %}
 <li class="dropdown">
-
+    <!--
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
         aria-expanded="false">
         <span class="nav-circle">{{ current_language }}</span>
     </a>
+    -->
+    <a href="#" class="" data-toggle="" role="button" aria-haspopup="true"
+       aria-expanded="false">
+        <span class="nav-circle">{{ current_language }}</span>
+    </a>
+
 
     <ul class="dropdown-menu">
         {% for language in languages %}
