--- a/templates/filters.html
+++ b/templates/filters.html
@@ -356,25 +356,25 @@
                                 Spatial Data
                             </li>
                             <li>
-                                Location
+                                <a href="#">Location</a>
                             </li>
                             <li style="padding-left: 15px; background-color: #ebebeb;">
                                 General Info
                             </li>
                             <li>
-                                Current size under contract
+                                <a href="#">Current size under contract</a>
                             </li>
                             <li>
-                                Intention of the Investment
+                                <a href="#">Intention of the Investment</a>
                             </li>
                             <li>
-                                Nature of the deal
+                                <a href="#">Nature of the deal</a>
                             </li>
                             <li>
-                                Negotiation Status
+                                <a href="#">Negotiation Status</a>
                             </li>
                             <li>
-                                Implementation Status
+                                <a href="#">Implementation Status</a>
                             </li>
                         </ul>
 
