--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -5,6 +5,8 @@
 
 {% block breadcrumb %}{% endblock %}
 
+{% block subnav_inner %}{% endblock %}
+
 {% block content %}
     {% include 'filters.html' %}
     <div id="explanation" class="wrap center">
@@ -96,7 +98,7 @@
     <div id="databasestats" class="wrap">
         <div class="row">
             <div class="col-md-6">
-                <h3>Latest database Modification</h3>
+                <h3>Latest database Modifications</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>Deal #</th>
@@ -146,7 +148,7 @@
 
             <div class="col-md-6">
                 <h3>Twitter</h3>
-                <a class="twitter-timeline" height="555" href="https://twitter.com/search?q=%23landmatrix"
+                <a class="twitter-timeline" width="100%" href="https://twitter.com/search?q=%23landmatrix"
                    data-widget-id="344020652090597377">Tweets about "#landmatrix"</a>
                 <script>!function (d, s, id) {
                     var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
