--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -22,14 +22,17 @@
 {% endblock %}
 
 {% block subnav_inner %}
-    <a href="foobar/map"><i class="lm-map-marker"></i>Map</a>
-    <a href="foobar/grid"><i class="lm-table"></i>Data</a>
-    <a href="foobar/charts"><i class="lm-bar-chart"></i>Charts</a>
+    <li role="presentation"><a href="global/map"><i class="lm lm-map-marker"></i>Download this</a>
+    </li>
+    <li role="presentation"><a href="global/grid"><i class="lm lm-table"></i>Download this</a>
+    </li>
+    <li role="presentation"><a href="global/charts"><i class="lm lm-bar-chart"></i>Download this</a>
+    </li>
 {% endblock %}
 
 {% block content %}
     {% include "filters.html" %}
-    {{ filters }}
+    {# { filters } #}
     <div id="alert_placeholder"></div>
 
     <div id="map" class="map" title='All Deals'></div>
@@ -38,7 +41,6 @@
     </script>
 
     <div id="popup" class="ol-popup">
-        <span>Deal details</span>
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
         <div id="popup-content"></div>
     </div>
